Cards look good on mobile. Flex is wrong on desktop. Fix maybe

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin-bottom: 2rem;
 }
 
 .card {
@@ -301,6 +302,10 @@ a:focus {
 
     .home-cards {
         flex-direction: row;
+    }
+
+    .cards {
+        flex-direction: column;
     }
 
     .card {
